--- a/ClassLibraryStandard/ClassLibraryStandard.csproj
+++ b/ClassLibraryStandard/ClassLibraryStandard.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\MiddleweightReflection\MiddleweightReflection\MiddleweightReflection.csproj" />
+    <ProjectReference Include="..\..\MiddleweightReflection\MiddleweightReflection\MiddleweightReflection.csproj" />
   </ItemGroup>
 
   <ItemGroup>
