Add debug log window

--- a/Tempo2/Tempo2.csproj
+++ b/Tempo2/Tempo2.csproj
@@ -119,6 +119,7 @@
   <ItemGroup>
     <None Remove="AttributesView2.xaml" />
     <None Remove="CommonCommandBar.xaml" />
+    <None Remove="DebugLog.xaml" />
     <None Remove="Filters3.xaml" />
     <None Remove="FiltersFlyout.xaml" />
     <None Remove="FiltersFlyout3.xaml" />
@@ -135,6 +136,9 @@
     <None Update="Assemblies\System.Runtime.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <Page Update="DebugLog.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Update="HelpPage.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
