--- a/Tempo2/Tempo2.csproj
+++ b/Tempo2/Tempo2.csproj
@@ -122,6 +122,7 @@
     <None Remove="AttributesView2.xaml" />
     <None Remove="CommonCommandBar.xaml" />
     <None Remove="DebugLog.xaml" />
+    <None Remove="DropDownAppBarButtonContent.xaml" />
     <None Remove="Filters3.xaml" />
     <None Remove="FiltersFlyout.xaml" />
     <None Remove="FiltersFlyout3.xaml" />
@@ -144,6 +145,9 @@
     <None Update="Assemblies\System.Runtime.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <Page Update="DropDownAppBarButtonContent.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Update="DebugLog.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
