Add dark mode support (#4)

--- a/Tempo2/Tempo2.csproj
+++ b/Tempo2/Tempo2.csproj
@@ -131,9 +131,11 @@
     <None Remove="HelpPage.xaml" />
     <None Remove="LoadingDialog.xaml" />
     <None Remove="MemberMore.xaml" />
+    <None Remove="RootFrame.xaml" />
     <None Remove="SmokeLayer.xaml" />
     <None Remove="Smokey.xaml" />
     <None Remove="TimedTextBox.xaml" />
+    <None Remove="UserControl1.xaml" />
   </ItemGroup>
   <ItemGroup>
     <Page Update="AllModelProperties.xaml">
@@ -151,6 +153,12 @@
     <None Update="Assemblies\System.Runtime.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <Page Update="RootFrame.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Update="UserControl1.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Update="DocPageViewer.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
