* Added a tooltip that looks like a bit like a teaching tip * Fix crash when two dialogs try to open at the same time

--- a/Tempo2/Tempo2.csproj
+++ b/Tempo2/Tempo2.csproj
@@ -123,6 +123,7 @@
     <None Remove="AllModelPropertiesPage.xaml" />
     <None Remove="AttributesView2.xaml" />
     <None Remove="CommonCommandBar.xaml" />
+    <None Remove="ComplexToolTip.xaml" />
     <None Remove="DebugLog.xaml" />
     <None Remove="DocPageViewer.xaml" />
     <None Remove="DropDownAppBarButtonContent.xaml" />
@@ -155,6 +156,9 @@
     <None Update="Assemblies\System.Runtime.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <Page Update="ComplexToolTip.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Update="InfoTip.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
