--- a/Tempo2/Tempo2.csproj
+++ b/Tempo2/Tempo2.csproj
@@ -32,17 +32,6 @@
     <WindowsSdkPackageVersion>10.0.19041.38</WindowsSdkPackageVersion>
   </PropertyGroup>
 
-  <!-- Build and restore the diff console project so its outputs can be packaged -->
-  <Target Name="BuildDiffProject" BeforeTargets="PrepareForBuild">
-    <MSBuild Projects="..\TempoDiff\TempoDiff.csproj" Targets="Restore;Build" Properties="Configuration=$(Configuration)" />
-  </Target>
-  <!-- Copy diff outputs into this project's output directory -->
-  <Target Name="CopyDiffOutputs" AfterTargets="Build">
-    <ItemGroup>
-      <DiffFiles Include="..\TempoDiff\bin\$(Configuration)\net6.0\*.*" />
-    </ItemGroup>
-    <Copy SourceFiles="@(DiffFiles)" DestinationFolder="$(OutDir)" SkipUnchangedFiles="true" />
-  </Target>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <OutputPath>bin\x86\Debug\</OutputPath>
@@ -77,6 +66,7 @@
     <DefineConstants>DEBUG;TRACE;NETFX_CORE;WINDOWS_UWP</DefineConstants>
     <NoWarn>;2008</NoWarn>
     <UseVSHostingProcess>false</UseVSHostingProcess>
+    <LayoutDir></LayoutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <OutputPath>bin\x64\Release\</OutputPath>
@@ -122,6 +112,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ClassLibraryStandard\ClassLibraryStandard.csproj" />
     <ProjectReference Include="..\middleweight-reflection\MiddleweightReflection\MiddleweightReflection.csproj" />
+    <ProjectReference Include="..\TempoDiff\TempoDiff.csproj" />
     <ProjectReference Include="..\TempoPSProvider2\TempoPSProvider2.csproj" />
   </ItemGroup>
   <ItemGroup>
