--- a/TempoDiff/TempoDiff.csproj
+++ b/TempoDiff/TempoDiff.csproj
@@ -1,12 +1,20 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
+    <!--<TargetFramework>net6.0-windows10.0.19041</TargetFramework>-->
     <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>TempoDiff</RootNamespace>
     <AssemblyName>TempoDiff</AssemblyName>
+    <PublishSingleFile>true</PublishSingleFile>
+    <SelfContained>true</SelfContained>
+    <PublishTrimmed>true</PublishTrimmed>
   </PropertyGroup>
 
-    <ItemGroup>
-        <ProjectReference Include="..\ClassLibraryStandard\ClassLibraryStandard.csproj" />
-    </ItemGroup>
+  <PropertyGroup>
+    <RuntimeIdentifiers>win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ClassLibraryStandard\ClassLibraryStandard.csproj" />
+  </ItemGroup>
 </Project>
